<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/find_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="112dp"
        android:letterSpacing="0.16"
        android:lineSpacingExtra="1sp"
        android:text="@string/find_password"
        android:textColor="#005c77"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/find_password_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="49dp"
        android:layout_marginTop="29dp"
        android:letterSpacing="0.03"
        android:lineSpacingExtra="8sp"
        android:text="@string/find_password_content"
        android:textColor="#4a4a4a"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_password" />

    <ImageView
        android:id="@+id/find_close"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginRight="21dp"
        android:layout_marginTop="21dp"
        android:src="@drawable/close"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/find_email_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="43dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_password_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/find_email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/id_edittext"
            android:drawablePadding="17dp"
            android:drawableStart="@drawable/mail"
            android:drawableTint="#00d5d3"
            android:inputType="textEmailAddress"
            android:paddingLeft="9dp"
            android:textColorHint="#cbcbcb"
            android:textStyle="bold" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/find_find"
        android:layout_width="280dp"
        android:layout_height="54dp"
        android:layout_marginTop="47dp"
        android:background="@drawable/sign_button"
        android:text="@string/password_button"
        android:textColor="#ffffff"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_email_layout" />

</android.support.constraint.ConstraintLayout>